--- a/about.html
+++ b/about.html
@@ -14,26 +14,26 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&amp;display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="assets/css/Contact-Details.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="mapas.css">
+    <link rel="stylesheet" href="assets/css/untitled-1.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body style="background: url('assets/img/bg.jpg');">
-<a href="https://api.whatsapp.com/send?phone=556699270176&text=Olá%20gostaria%20gostaria%20de%20saber%20mais%20sobre%20seus%20serviços."
+<a href="https://api.whatsapp.com/send?phone=554791270176&text=Olá%20gostaria%20gostaria%20de%20saber%20mais%20sobre%20seus%20serviços."
             target="_blank"
                style="position:fixed;bottom:20px;right:30px;z-index: 1000;">
           <svg enable-background="new 0 0 512 512" width="50" height="50" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><path d="M256.064,0h-0.128l0,0C114.784,0,0,114.816,0,256c0,56,18.048,107.904,48.736,150.048l-31.904,95.104  l98.4-31.456C155.712,496.512,204,512,256.064,512C397.216,512,512,397.152,512,256S397.216,0,256.064,0z" fill="#4CAF50"/><path d="m405.02 361.5c-6.176 17.44-30.688 31.904-50.24 36.128-13.376 2.848-30.848 5.12-89.664-19.264-75.232-31.168-123.68-107.62-127.46-112.58-3.616-4.96-30.4-40.48-30.4-77.216s18.656-54.624 26.176-62.304c6.176-6.304 16.384-9.184 26.176-9.184 3.168 0 6.016 0.16 8.576 0.288 7.52 0.32 11.296 0.768 16.256 12.64 6.176 14.88 21.216 51.616 23.008 55.392 1.824 3.776 3.648 8.896 1.088 13.856-2.4 5.12-4.512 7.392-8.288 11.744s-7.36 7.68-11.136 12.352c-3.456 4.064-7.36 8.416-3.008 15.936 4.352 7.36 19.392 31.904 41.536 51.616 28.576 25.44 51.744 33.568 60.032 37.024 6.176 2.56 13.536 1.952 18.048-2.848 5.728-6.176 12.8-16.416 20-26.496 5.12-7.232 11.584-8.128 18.368-5.568 6.912 2.4 43.488 20.48 51.008 24.224 7.52 3.776 12.48 5.568 14.304 8.736 1.792 3.168 1.792 18.048-4.384 35.52z" fill="#FAFAFA"/></svg>
              </a>
-    <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3" data-aos="fade"><br></span><span data-aos="fade-right" class="site-heading-lower"><strong>WR ENGENHARIA - ASSESSORIA AGROAMBIENTAL E TOPOGRÁFICA</strong><br><br></span></h1>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark py-lg-4" id="mainNav">
-        <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="index.html"><strong>wr</strong></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="index.html" style="border-color: rgb(230, 167, 86);"><strong><span style="color: rgb(255, 255, 255);">wr</span></strong></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">INÍCIO</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">SOBRE NÓS</a></li>
                     <li class="nav-item"><a class="nav-link" href="products.html">SERVIÇOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="onde%20nos%20encontrar.html">ONDE NOS ENCONTRAR</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contato.html">contato</a></li>
                 </ul>
             </div>
         </div>
@@ -46,7 +46,7 @@
                         <div class="bg-faded rounded p-5">
                             <h2 class="section-heading mb-4"><span data-aos="fade-right" class="section-heading-upper">comprometimento e qualidade</span><span data-aos="fade-left" data-aos-duration="1400" class="section-heading-lower">quem somos</span></h2>
                             <p data-aos="fade-right" data-aos-duration="1550">Fundada em 2013, a WR ENGENHARIA - ASSESSORIA AGROAMBIENTAL E TOPOGRÁFICA é uma empresa reconhecida pela capacidade e compromisso na busca da qualidade e eficiência em seus trabalhos prestados.<br></p>
-                            <p data-aos="fade-left" data-aos-duration="2000" class="mb-0">Com equipe técnica multidisciplinar preparada e comprometida para atender nossos clientes dentro dos prazos estabelecidos atuando com a melhor técnica, ética e transparência.&nbsp;<br></p><a class="btn btn-primary d-inline-block mx-auto btn-xl" role="button" data-aos="fade-right" data-aos-duration="2800" href="products.html">Conheça nossos serviços</a>
+                            <p data-aos="fade-left" data-aos-duration="2000" class="mb-0">Com equipe técnica multidisciplinar preparada e comprometida para atender nossos clientes dentro dos prazos estabelecidos atuando com a melhor técnica, ética e transparência.&nbsp;<br></p><a class="btn btn-primary d-inline-block mx-auto btn-xl" role="button" data-aos="fade-right" data-aos-duration="2800" href="products.html" style="background: rgb(52,58,64);border-style: none;font-size: 17.8px;">Conheça nossos serviços</a>
                         </div>
                     </div>
                 </div>
