--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>WR ENGENHARIA - ASSESSORIA AGROAMBIENTAL E TOPOGRÁFICA</title>
+    <title>INICIO</title>
     <meta name="description" content="engenharia ambiental ">
     <link rel="icon" type="image/jpeg" sizes="1280x967" href="assets/img/0456fea2-54ce-4406-af31-28fcc3b4f46a.jpg">
     <link rel="icon" type="image/jpeg" sizes="1280x967" href="assets/img/0456fea2-54ce-4406-af31-28fcc3b4f46a.jpg">
